# OCaml

./: .gitignore  Microsoft.Powershell_profile.ps1  README.md  devoir_de_programmation.opam
VERA-MIRI-PAILLUSSON/: GROUPE.md
VERA-MIRI-PAILLUSSON/lib/: lib.ml  nodesum.ml  query.ml  sig.ml
VERA-MIRI-PAILLUSSON/test/: dune
Vera-Miri-Paillusson/: dune-project
Vera-Miri-Paillusson/lib/: query.ml
_build/: .db  .digest-db  log
_build/default/: devoir_de_programmation.dune-package  devoir_de_programmation.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: lib.cma  lib.cmxa  lib.cmxs  lib__.ml-gen  nodemaxocc.ml  nodemaxsubseg.ml  nodesum.ml  nodesum.mli  query.ml  sig.mli
_build/default/lib/.lib.objs/: lib.impl.all-deps  lib.impl.d  lib__Nodemaxocc.impl.d  lib__Nodemaxocc.intf.d  lib__Nodemaxsubseg.impl.d  lib__Nodesum.impl.d  lib__Nodesum.intf.d  lib__Query.impl.all-deps  lib__Query.impl.d  lib__Query.intf.d  lib__Sig.impl.d  lib__Sig.intf.d
_build/default/lib/.lib.objs/byte/: lib.cmi  lib.cmo  lib.cmt  lib__.cmi  lib__.cmo  lib__.cmt  lib__Nodemaxocc.cmi  lib__Nodemaxocc.cmo  lib__Nodemaxocc.cmt  lib__Nodemaxocc.cmti  lib__Nodemaxsubseg.cmi  lib__Nodemaxsubseg.cmo  lib__Nodemaxsubseg.cmt  lib__Nodesum.cmi  lib__Nodesum.cmo  lib__Nodesum.cmt  lib__Nodesum.cmti  (+8 more)
_build/default/lib/.merlin-conf/: lib-lib
_build/default/test/: test_devoir_de_programmation.ml
_build/default/test/.merlin-conf/: exe-test_devoir_de_programmation
lib/: nodemaxocc.ml  nodemaxsubseg.ml  nodesum.ml  query.ml  query.mli
testCodeHtml/: index.html
(+13 files in other folders)
